==========
01/04/2009
==========

- Ajustes no cadastro de feeds
- Inclusao de novas tags de i18n
- Alteracao do model, inclusao de stored procedure para inclusao de feeds

HORAS TRABALHADAS: 6h

==========
02/04/2009
==========

- Cadastro de feed ok através de stored procedure

HORAS TRABALHADAS: 1h

==========
03/04/2009
==========

- Remoção de stored procedure. Implementação de transaction e queryes através
do código PHP
- Ajustes no código base. Implementação de transaction no Model

HORAS TRABALHADAS: 2h

==========
04/04/2009
==========

- Alteração do cadastro de Feeds. Inclusao da biblioteca feedparser no
backend e implementação no webservice discover_feed(url)
- Cadastro de feeds: Implementação de inclusão de feed no blog do usuário
- Ajustes no retorno do XML para requisicoes AJAX
- Exibicao de feeds cadastrado no menu lateral
- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 12h

==========
06/04/2009
==========

- Bugfixes e melhorias no cadastro de feeds

HORAS TRABALHADAS: 2h

==========
07/04/2009
==========

- Inclusao de evento nos botoes que carregam um feed
- Ajustes no DB, tabela de itens de notícias

HORAS TRABALHADAS: 2h